# Heart_Attack_Risk_Model

./: README.md  app.py  config.py  main.py  pyproject.toml
research/: model_classification.ipynb  model_regression.ipynb
src/: data_ingestion.py  data_preprocessing.py  model_building.py  model_evalution.py
